--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
   gtag('config', 'G-0HHN16V3R5');
  </script>
-
-  <link rel="apple-touch-icon" sizes="180x180" href="imagem/apple-touch-icon-convertido-de-png.png">
-  <link rel="icon" type="image/jpg" sizes="32x32" href="imagem/favicon-32x32-convertido-de-png.png">
-  <link rel="icon" type="image/jpg" sizes="16x16" href="imagem/favicon-16x16-convertido-de-png.png">
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="Imagem/Favicon.png">
+  <link rel="icon" type="image/jpg" sizes="32x32" href="Imagem/Favicon.png">
+  <link rel="icon" type="image/jpg" sizes="16x16" href="Imagem/Favicon.png">
 
   <title>Ávila Catálogo de Crochê</title>
   <meta name="description" content="Catálogo de crochê artesanal por Ticia Ávila. Tapetes, bolsas, amigurumis e jogos/kits. Fale pelo WhatsApp." />
@@ -119,45 +119,45 @@
           <article class="product-card" data-category="kits" tabindex="0">
           <img src="Catalogo/004_04.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Jogo de banheiro Floratta</h3>
+            <p class="desc">Kit com 3 peças de tamanhos variados</p>
+            <p class="product-price">R$ 160,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="amigurumis" tabindex="0">
           <img src="Catalogo/003_01.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Santinha</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Nossa S. Aparecida</h3>
+            <p class="desc">Medida: 15cm</p>
+            <p class="product-price">R$ 100,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="amigurumis" tabindex="0">
           <img src="Catalogo/003_04.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Capivara</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Chaveiro Capivara</h3>
+            <p class="desc">Medida: 8cm</p>
+            <p class="product-price">R$ 15,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="bolsas" tabindex="0">
           <img src="Catalogo/002_01.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Bolsa</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Bolsa Onix</h3>
+            <p class="desc">Sobre encomenda</p>
+            <p class="product-price">R$ 100,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="bolsas" tabindex="0">
           <img src="Catalogo/002_02.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Bolsa</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Bolsa Granada</h3>
+            <p class="desc">Sob encomenda</p>
+            <p class="product-price">R$ 120,00</p>
           </div>
         </article>
         
@@ -182,9 +182,9 @@
           <article class="product-card" data-category="tapetes" tabindex="0">
           <img src="Catalogo/001_03.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Tapete</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Passadeira Tulipa</h3>
+            <p class="desc">Medida: 1,25 x 50cm</p>
+            <p class="product-price">R$ 100,00</p>
           </div>
         </article>
 
@@ -274,16 +274,16 @@
           <div class="product-body">
             <h3 class="product-name">Bolsa Granada</h3>
             <p class="desc">Medida: 30 x 25cm</p>
-            <p class="product-price">R$ 170,00</p>
+            <p class="product-price">R$ 120,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="bolsas" tabindex="0">
           <img src="Catalogo/002_05.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Bolsas</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Bolsa Mescla</h3>
+            <p class="desc">Sob encomenda</p>
+            <p class="product-price">R$ 80,00</p>
           </div>
         </article>
 
@@ -326,72 +326,63 @@
           <article class="product-card" data-category="amigurumis" tabindex="0">
           <img src="Catalogo/003_02.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Amigurumi</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Banguela</h3>
+            <p class="desc">Medida: 10cm</p>
+            <p class="product-price">R$ 50,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="amigurumis" tabindex="0">
           <img src="Catalogo/003_03.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Amigurumi</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Furia da luz</h3>
+            <p class="desc">Medida: 10cm</p>
+            <p class="product-price">R$ 50,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="amigurumis" tabindex="0">
           <img src="Catalogo/003_05.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Amigurumi</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Vaca</h3>
+            <p class="desc">Medida: 12cm</p>
+            <p class="product-price">R$ 40,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="amigurumis" tabindex="0">
           <img src="Catalogo/003_06.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Amigurumi</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
-          </div>
-        </article>
-
-          <article class="product-card" data-category="amigurumis" tabindex="0">
-          <img src="Catalogo/003_07.jpg" loading="lazy">
-          <div class="product-body">
-            <h3 class="product-name">Amigurumi</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Santinha</h3>
+            <p class="desc">Medida: 8cm</p>
+            <p class="product-price">R$ 40,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="amigurumis" tabindex="0">
           <img src="Catalogo/003_08.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Amigurumi</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Mike Wazowski</h3>
+            <p class="desc">Medida: 14cm</p>
+            <p class="product-price">R$ 50,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="kits" tabindex="0">
           <img src="Catalogo/004_02.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Jogo</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Kit passadeira Luciana</h3>
+            <p class="desc">Kit com 3 peças de tamanhos variados</p>
+            <p class="product-price">R$ 120,00</p>
           </div>
         </article>
 
           <article class="product-card" data-category="kits" tabindex="0">
           <img src="Catalogo/004_03.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Jogo</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Kit Dragões</h3>
+            <p class="desc">Medida: 10cm cada</p>
+            <p class="product-price">R$ 80,00</p>
           </div>
         </article>
 
@@ -425,9 +416,9 @@
           <article class="product-card" data-category="kits" tabindex="0">
           <img src="Catalogo/004_08.jpg" loading="lazy">
           <div class="product-body">
-            <h3 class="product-name">Jogo</h3>
-            <p class="desc">Informação:</p>
-            <p class="product-price">R$ 00,00</p>
+            <h3 class="product-name">Jogo de banheiro Napolitano</h3>
+            <p class="desc">Kit com 3 peças de tamanhos variados</p>
+            <p class="product-price">R$ 120,00</p>
           </div>
         </article>
 
