--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   gtag('config', 'G-0HHN16V3R5');
  </script>
   
-  <link rel="apple-touch-icon" sizes="180x180" href="Imagem/Favicon.png">
-  <link rel="icon" type="image/jpg" sizes="32x32" href="Imagem/Favicon.png">
-  <link rel="icon" type="image/jpg" sizes="16x16" href="Imagem/Favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="Imagem/logo.png">
+  <link rel="icon" type="image/jpg" sizes="32x32" href="Imagem/logo.png">
+  <link rel="icon" type="image/jpg" sizes="16x16" href="Imagem/logo.png">
 
   <title>Ávila Catálogo de Crochê</title>
   <meta name="description" content="Catálogo de crochê artesanal por Ticia Ávila. Tapetes, bolsas, amigurumis e jogos/kits. Fale pelo WhatsApp." />
